--- a/home.css
+++ b/home.css
@@ -41,7 +41,7 @@ a {
     margin-left: 200px;
 }
 
-.titolo2 {
+.titolo2,.titolo3 {
 
     text-align: center;
 }
@@ -74,6 +74,61 @@ p {
 .comp {
 
     text-align: center;
+}
+
+form {
+     margin: auto;
+     padding: 20px;
+     border: 1px solid black;
+     width: 500px ;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     background-color: rgb(185, 173, 173);
+     border-color: rgb(185, 173, 173); ;
+     color: white;
+}
+
+label {
+     font-size: 20px;
+
+}
+
+input[type=text], input[type=email] {
+
+    width: 400px;
+    height: 20px;
+    border-color: white ;
+}
+
+textarea {
+    width: 400px;
+    border-color:white;
+}
+
+button {
+    width: 90px;
+    height: 50px;
+    font-size: 20px;
+    background-color: black;
+    color: white;
+    border-radius: 20px;
+}
+
+.seg {
+
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.follow {
+    
+    display: flex;
+    justify-content: center;
+  
+
+    margin: 30px;
+    
 }
 
 footer {
